2003-05-07  Dodji  <dodji@seketeli.org>

	* tests/test7-main.c: just added a test for the "background-color" 
	property.

	* src/layeng/cr-box-view.c:
	(set_color ()) added this function to manage the setting
	of rgb color in an easier way than set_background/foreground().
	(set_border_line_attrs ()) implemented the border-x-color
	property setting in this function. This uses the new set_color ()
	function.
	(draw_padding ()) revisited this function to make it draw
	a padding area that has "background" color.
	
	
2003-05-06  Dodji  <dodji@seketeli.org>

	* src/layeng/cr-style.[ch]: started to add the support of
	the "color" and "background-color" properties.

	* src/layeng/cr-lay-eng.c:
	(style_specified_2_computed_value()) updated this function to
	compute also the new colors properties (color and background-color).
	
	* src/layeng/cr-box-view.c:
	(set_background_color ()) 
	(set_foreground_color ())added these functions to set the box 
	inner/padding edge color.
	also started to use these two functions to test them.
	
2003-05-05  Dodji  <dodji@seketeli.org>

	* tests/test7-main.c: small update for debug purposes.

	* src/layeng/cr-style.h: cleanup.

	* src/layeng/cr-lay-eng.c: put in here what is needed to support
	border-x and border-style-x properties.

	* src/layeng/cr-box.[ch]: make CRBoxModel inherits CRBox.

	* src/layeng/cr-box-view.c: start to support the border-style-x and
	border-x property. I must test this.

	* configure.in: defined a personal environment where I can set
	the CFLAGS I want.

2003-05-04  Dodji  <dodji@seketeli.org>

	* src/parser/cr-tknzr.c:
	(cr_tknzr_get_next_token ()) fixed a small bug in here.
	
	* src/layeng/cr-style.[ch]: 
	Deeply Modified the layout of the CRStyle structure for 
	1/group all numerical properties together in a table.
	2/group all color (rgb) properties together in another table.
	3/group all border style properties together in another table.
	That way, accessing those properties is more efficient.